# valentotbot

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_core_tables.py
spec/: tgbot.md
src/valentotbot/: __init__.py  config.py  i18n.py  logging.py  main_bot.py
src/valentotbot/application/: dto.py
src/valentotbot/application/services/: callback_tokens.py  links.py  messages.py  reveal.py  users.py
src/valentotbot/domain/: entities.py  interfaces.py  value_objects.py
src/valentotbot/infrastructure/db/: __init__.py  dialog_state_store.py  engine.py  models.py  repositories.py
src/valentotbot/presentation/bot/: handlers.py
tests/unit/: test_services.py
