[build-system] 
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valentotbot"
version = "0.1.0"
description = "Anonymous valentines Telegram bot with multi-links"
requires-python = ">=3.11"
authors = [{ name = "eflarus" }]
readme = "README.MD"
dependencies = [
    "python-telegram-bot==22.5",
    "fastapi>=0.110,<0.113",
    "uvicorn[standard]>=0.29,<0.31",
    "SQLAlchemy>=2.0,<2.1",
    "alembic>=1.13,<1.14",
    "asyncpg>=0.29,<0.30",
    "redis>=5.0,<5.1",
    "pydantic>=2.6,<2.9",
    "pydantic-settings>=2.2,<2.4",
    "python-dotenv>=1.0,<1.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.4,<24.9",
    "ruff>=0.4,<0.6",
    "mypy>=1.10,<1.12",
    "pytest>=8.2,<8.4",
    "types-redis>=4.6.0.20240425",
]

[tool.black]
line-length = 142
target-version = ["py311"]
include = "\\.pyi?$"
extend-exclude = """
/(
    .git
    | .mypy_cache
    | .ruff_cache
    | build
    | dist
)
"""

[tool.ruff]
target-version = "py311"
line-length = 142
respect-gitignore = true
fix = false
preview = false

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "Q",
    "C4",
    "T10",
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["valentotbot"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = false
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src"]

[tool.mypy-tests]
disallow_untyped_defs = false
